Corrijo el nombre del campo ID en SchoolSupplyCatalog para mostrar schoolSupplyId correctamente

--- a/Version-1.1/views/SchoolSupplyCatalog.pug
+++ b/Version-1.1/views/SchoolSupplyCatalog.pug
@@ -17,7 +17,7 @@ html
             tbody 
                 each supply in schoolSupplies 
                     tr 
-                        td= supply.supplyId 
+                        td= supply.schoolSupplyId 
                         td= supply.name
                         td= supply.brand
                         td= supply.description 
