Correccion precio total en vista Pedidos

--- a/Version-1.1/views/Orders.pug
+++ b/Version-1.1/views/Orders.pug
@@ -35,4 +35,4 @@ html
                     td $#{order.price}
                     td= order.quantityProduct
                     td= order.status
-                    td= order.total
+                    td $#{order.total}
