--- a/Version-1.1/views/Login.pug
+++ b/Version-1.1/views/Login.pug
@@ -12,3 +12,6 @@ html
       input(type='password' name='password' required)
       br
       button(type='submit') Ingresar
+
+    p ¿No tenés una cuenta?
+      a(href='/auth/register') Registrate acá
