--- a/Version-1.1/views/Register.pug
+++ b/Version-1.1/views/Register.pug
@@ -17,3 +17,6 @@ html
         option(value='owner') Owner
       br
       button(type='submit') Registrarse
+
+    p ¿Ya tenés una cuenta?
+      a(href='/auth/login') Iniciá sesión
