--- a/Version-1.1/views/Suppliers.pug
+++ b/Version-1.1/views/Suppliers.pug
@@ -2,9 +2,11 @@ doctype html
 html
     head
         title Proveedores
+        link(rel="stylesheet", href="/css/style.css")
     body 
+        button(onclick="location.href='/dashboard'") Volver 
         h1 Proveedores
-        table(border='1')
+        table
             thead 
                 tr 
                     th ID de Proveedor 
