--- a/Version-1.1/views/BookCatalog.pug
+++ b/Version-1.1/views/BookCatalog.pug
@@ -2,9 +2,11 @@ doctype html
 html
     head
         title Catalogo de Libros
+        link(rel="stylesheet", href="/css/style.css")
     body 
+        button(onclick="location.href='/dashboard'") Volver 
         h1 Catalogo de Libros 
-        table(border='1')
+        table
             thead 
                 tr 
                     th ID
@@ -19,12 +21,12 @@ html
             tbody 
                 each book in books 
                     tr 
-                    td= book.bookId 
+                    td(class='num')= book.bookId 
                     td= book.title 
                     td= book.author
                     td= book.publisherHouse 
-                    td= book.isbn 
+                    td(class='num')= book.isbn 
                     td= book.literaryGenre 
                     td= book.section 
-                    td $#{book.price}
-                    td= book.stock
+                    td(class='num') $#{book.price}
+                    td(class='num')= book.stock
