Revertir cambios Front
This reverts commit 6633283a221a316eb7d3b6a9060756ed22612835.

--- a/Version-1.1/views/BookCatalog.pug
+++ b/Version-1.1/views/BookCatalog.pug
@@ -2,11 +2,9 @@ doctype html
 html
     head
         title Catalogo de Libros
-        link(rel="stylesheet", href="/css/style.css")
     body 
-        button(onclick="location.href='/dashboard'") Volver 
         h1 Catalogo de Libros 
-        table
+        table(border='1')
             thead 
                 tr 
                     th ID
@@ -21,12 +19,12 @@ html
             tbody 
                 each book in books 
                     tr 
-                    td(class='num')= book.bookId 
+                    td= book.bookId 
                     td= book.title 
                     td= book.author
                     td= book.publisherHouse 
-                    td(class='num')= book.isbn 
+                    td= book.isbn 
                     td= book.literaryGenre 
                     td= book.section 
-                    td(class='num') $#{book.price}
-                    td(class='num')= book.stock
+                    td $#{book.price}
+                    td= book.stock
