--- a/Version-1.1/views/MagazineCatalog.pug
+++ b/Version-1.1/views/MagazineCatalog.pug
@@ -2,11 +2,9 @@ doctype html
 html
     head
         title Catalogo de Revistas
-        link(rel="stylesheet", href="/css/style.css")
     body 
-        button(onclick="location.href='/dashboard'") Volver
         h1 Catalogo de Revistas 
-        table
+        table(border='1')
             thead 
                 tr 
                     th ID
@@ -21,12 +19,12 @@ html
             tbody 
                 each magazine in magazines 
                     tr 
-                        td(class='num')= magazine.magazineId
+                        td= magazine.magazineId
                         td= magazine.name
                         td= magazine.date
-                        td(class='num')= magazine.issueNumber 
-                        td(class='num')= magazine.number
-                        td(class='num')= magazine.issn 
+                        td= magazine.issueNumber 
+                        td= magazine.number
+                        td= magazine.issn 
                         td= magazine.section 
-                        td(class='num') $#{magazine.price}
-                        td(class='num')= magazine.stock
+                        td $#{magazine.price}
+                        td= magazine.stock
