--- a/Version-1.1/views/SchoolSupplyCatalog.pug
+++ b/Version-1.1/views/SchoolSupplyCatalog.pug
@@ -2,11 +2,9 @@ doctype html
 html
     head
         title Catalogo de Artículos de Librería
-        link(rel="stylesheet", href="/css/style.css")
     body 
-        button(onclick="location.href='/dashboard'") Volver 
         h1 Catalogo de Artículos de Librería 
-        table
+        table(border='1')
             thead 
                 tr 
                     th ID
@@ -19,10 +17,10 @@ html
             tbody 
                 each supply in schoolSupplies 
                     tr 
-                        td(class='num')= supply.schoolSupplyId 
+                        td= supply.schoolSupplyId 
                         td= supply.name
                         td= supply.brand
                         td= supply.description 
                         td= supply.section  
-                        td(class='num') $#{supply.price}
-                        td(class='num')= supply.stock
+                        td $#{supply.price}
+                        td= supply.stock
