Revert cambios Front
This reverts commit 0314545979f510d9a1002582872f4a61f71e3936.

--- a/Version-1.1/views/Suppliers.pug
+++ b/Version-1.1/views/Suppliers.pug
@@ -2,11 +2,9 @@ doctype html
 html
     head
         title Proveedores
-        link(rel="stylesheet", href="/css/style.css")
     body 
-        button(onclick="location.href='/dashboard'") Volver 
         h1 Proveedores
-        table
+        table(border='1')
             thead 
                 tr 
                     th ID de Proveedor 
