--- a/Version-1.1/public/css/style.css
+++ b/Version-1.1/public/css/style.css
@@ -60,10 +60,10 @@ tr {
     border-bottom: 1px solid #ddd;
 }
 
-td, th {
+td {
     padding: 0.5em 1em;
 }
 
-.price {
+.num {
     text-align: end;
 }
