Revert cambios Front
This reverts commit 308d730bb901fe1037e0d3f6723b44aefc7537aa.

--- a/Version-1.1/views/Orders.pug
+++ b/Version-1.1/views/Orders.pug
@@ -22,8 +22,8 @@ html
             tbody 
                 each order in orders 
                     tr 
-                    td(class='num')= order.orderId 
-                    td(class='num')= order.supplierId
+                    td= order.orderId 
+                    td(class="center")= order.supplierId
                     td
                         if order.product.name
                             span= order.product.name 
@@ -34,7 +34,7 @@ html
                     td= order.date 
                     td= order.description
                     td= order.category 
-                    td(class='num') $#{order.price}
-                    td(class='num')= order.quantityProduct
+                    td $#{order.price}
+                    td= order.quantityProduct
                     td= order.status
-                    td(class='num') $#{order.total}
+                    td $#{order.total}
