--- a/Version-1.1/views/Sales.pug
+++ b/Version-1.1/views/Sales.pug
@@ -2,11 +2,9 @@ doctype html
 html
     head
         title Ventas
-        link(rel="stylesheet", href="/css/style.css")
     body 
-        button(onclick="location.href='/dashboard'") Volver 
         h1 Ventas
-        table
+        table(border='1')
             thead 
                 tr 
                     th ID 
@@ -20,11 +18,11 @@ html
             tbody 
                 each sale in sales 
                     tr 
-                    td(class='num')= sale.saleId 
+                    td= sale.saleId 
                     td= sale.product
                     td= sale.date
                     td= sale.description 
                     td= sale.category 
-                    td(class='num') $#{sale.price}
-                    td(class='num')= sale.quantityProduct
-                    td(class='num') $#{sale.total}
+                    td $#{sale.price}
+                    td= sale.quantityProduct
+                    td $#{sale.total}
